--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@remix-run/react": "^2.13.1",
     "@remix-run/serve": "^2.13.1",
     "arctic": "^2.0.1",
+    "bcryptjs": "^2.4.3",
     "isbot": "^4.4.0",
     "mysql2": "^3.11.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "prisma": "^5.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,6 +30,8 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.13.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/passport-local": "^1.0.38",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
